// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownButton /> tested by react-test-renderer renders with "ariaControls" prop 1`] = `
.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:hover {
  background-color: #049;
}

.c0 {
  background-color: transparent;
  border-width: 2px;
  border-style: solid;
  color: #007aff;
  border-color: #007aff;
  width: 100%;
  height: 100%;
  min-height: 44px;
  border-color: #d1d6db;
}

.c0:hover {
  color: #049;
  border-color: #049;
  background-color: transparent;
}

.c0:hover {
  border-color: #007aff;
}

<button
  aria-controls="test"
  aria-expanded={null}
  aria-haspopup={undefined}
  className="c0 c1"
  id={undefined}
>
  Dropdown Button With "ariaControls" Prop
</button>
`;

exports[`<DropdownButton /> tested by react-test-renderer renders with "ariaExpanded" prop with invalid value 1`] = `
.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:hover {
  background-color: #049;
}

.c0 {
  background-color: transparent;
  border-width: 2px;
  border-style: solid;
  color: #007aff;
  border-color: #007aff;
  width: 100%;
  height: 100%;
  min-height: 44px;
  border-color: #d1d6db;
}

.c0:hover {
  color: #049;
  border-color: #049;
  background-color: transparent;
}

.c0:hover {
  border-color: #007aff;
}

<button
  aria-controls={undefined}
  aria-expanded={null}
  aria-haspopup={undefined}
  className="c0 c1"
  id={undefined}
>
  Dropdown Button With "ariaExpanded" Prop
</button>
`;

exports[`<DropdownButton /> tested by react-test-renderer renders with "ariaExpanded" prop with valid value, e.g. "true" or "false" 1`] = `
.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:hover {
  background-color: #049;
}

.c0 {
  background-color: transparent;
  border-width: 2px;
  border-style: solid;
  color: #007aff;
  border-color: #007aff;
  width: 100%;
  height: 100%;
  min-height: 44px;
  border-color: #d1d6db;
}

.c0:hover {
  color: #049;
  border-color: #049;
  background-color: transparent;
}

.c0:hover {
  border-color: #007aff;
}

<button
  aria-controls={undefined}
  aria-expanded="true"
  aria-haspopup={undefined}
  className="c0 c1"
  id={undefined}
>
  Dropdown Button With "ariaExpanded" Prop
</button>
`;

exports[`<DropdownButton /> tested by react-test-renderer renders with "ariaHaspopup" prop 1`] = `
.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:hover {
  background-color: #049;
}

.c0 {
  background-color: transparent;
  border-width: 2px;
  border-style: solid;
  color: #007aff;
  border-color: #007aff;
  width: 100%;
  height: 100%;
  min-height: 44px;
  border-color: #d1d6db;
}

.c0:hover {
  color: #049;
  border-color: #049;
  background-color: transparent;
}

.c0:hover {
  border-color: #007aff;
}

<button
  aria-controls={undefined}
  aria-expanded={null}
  aria-haspopup="true"
  className="c0 c1"
  id={undefined}
>
  Dropdown Button With "ariaHaspopup" Prop
</button>
`;

exports[`<DropdownButton /> tested by react-test-renderer renders with "cursor" prop 1`] = `
.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:hover {
  background-color: #049;
}

.c0 {
  background-color: transparent;
  border-width: 2px;
  border-style: solid;
  color: #007aff;
  border-color: #007aff;
  width: 100%;
  height: 100%;
  min-height: 44px;
  cursor: wait;
  border-color: #d1d6db;
}

.c0:hover {
  color: #049;
  border-color: #049;
  background-color: transparent;
}

.c0:hover {
  border-color: #007aff;
}

<button
  aria-controls={undefined}
  aria-expanded={null}
  aria-haspopup={undefined}
  className="c0 c1"
  cursor="wait"
  id={undefined}
>
  Dropdown Button With "cursor" Prop
</button>
`;

exports[`<DropdownButton /> tested by react-test-renderer renders with "id" prop 1`] = `
.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:hover {
  background-color: #049;
}

.c0 {
  background-color: transparent;
  border-width: 2px;
  border-style: solid;
  color: #007aff;
  border-color: #007aff;
  width: 100%;
  height: 100%;
  min-height: 44px;
  border-color: #d1d6db;
}

.c0:hover {
  color: #049;
  border-color: #049;
  background-color: transparent;
}

.c0:hover {
  border-color: #007aff;
}

<button
  aria-controls={undefined}
  aria-expanded={null}
  aria-haspopup={undefined}
  className="c0 c1"
  id="test"
>
  Dropdown Button With "id" Prop
</button>
`;

exports[`<DropdownButton /> tested by react-test-renderer renders without any prop 1`] = `
.c1 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:hover {
  background-color: #049;
}

.c0 {
  background-color: transparent;
  border-width: 2px;
  border-style: solid;
  color: #007aff;
  border-color: #007aff;
  width: 100%;
  height: 100%;
  min-height: 44px;
  border-color: #d1d6db;
}

.c0:hover {
  color: #049;
  border-color: #049;
  background-color: transparent;
}

.c0:hover {
  border-color: #007aff;
}

<button
  aria-controls={undefined}
  aria-expanded={null}
  aria-haspopup={undefined}
  className="c0 c1"
  id={undefined}
>
  Dropdown Button
</button>
`;
